[gd_scene load_steps=8 format=3 uid="uid://cr0lf6p1y3ynu"]

[ext_resource type="Texture2D" uid="uid://cqjou5dq0vsi4" path="res://image/ui/bullet.png" id="1_3pr6r"]
[ext_resource type="Script" path="res://data/ui/ui.gd" id="1_6l0vp"]
[ext_resource type="Theme" uid="uid://7q2urmetd46v" path="res://data/ui/main_theme.tres" id="1_q82oq"]
[ext_resource type="Texture2D" uid="uid://bkxcn7wugmo3l" path="res://image/ui/grenade.png" id="3_gi7n6"]
[ext_resource type="Texture2D" uid="uid://yd4shv6fjagb" path="res://image/ui/progress_bar/bg.png" id="4_8xprh"]
[ext_resource type="Texture2D" uid="uid://cw1wdds0o6yx" path="res://image/ui/progress_bar/over.png" id="5_6evg2"]
[ext_resource type="Texture2D" uid="uid://d00bfklstkh5l" path="res://image/ui/progress_bar/progress.png" id="5_vqn7i"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_6l0vp")

[node name="LaserCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.01
anchor_top = 0.92
anchor_right = 0.02
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LaserCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="LaserQuantity" type="Label" parent="LaserCounter/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_q82oq")
text = "0
"
horizontal_alignment = 1

[node name="Image" type="TextureRect" parent="LaserCounter/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_3pr6r")
expand_mode = 4

[node name="GrenadeCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.07
anchor_top = 0.92
anchor_right = 0.08
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GrenadeCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="GrenadeQuantity" type="Label" parent="GrenadeCounter/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_q82oq")
text = "0
"
horizontal_alignment = 1

[node name="Image" type="TextureRect" parent="GrenadeCounter/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_gi7n6")
expand_mode = 4

[node name="HealthContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 30

[node name="HealthBar" type="TextureProgressBar" parent="HealthContainer"]
layout_mode = 2
texture_under = ExtResource("4_8xprh")
texture_over = ExtResource("5_6evg2")
texture_progress = ExtResource("5_vqn7i")
